# npc-protocol

./: LICENSE  README.md  README.zh-TW.md
examples/code-reviewer-npc/: README.md  SKILL.md  main.py
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: swiftdeploy_case_study.md
sdk/python/npc/: __init__.py  card.py  context.py  response.py  server.py  session.py
spec/: README.md  confirmation-gate.md  instruction-interface.md  npc-card.md  session-model.md  skill-file.md
