[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "npc-protocol"
version = "0.1.0"
description = "Python SDK for building NPC Protocol servers"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
keywords = ["npc", "mcp", "agent", "protocol", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
redis = ["redis>=5.0.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/macropulse/npc-protocol"
Documentation = "https://github.com/macropulse/npc-protocol/tree/main/spec"
Repository = "https://github.com/macropulse/npc-protocol"
Issues = "https://github.com/macropulse/npc-protocol/issues"

[tool.hatch.build.targets.wheel]
packages = ["npc"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
